--- a/seminario.tex
+++ b/seminario.tex
@@ -102,6 +102,27 @@ irrelevantes son recuperadas y el usuario tiene que gastar tiempo en el filtrado
 a trav\'es de los resultados de b\'usqueda. 
 
 \subsection{Field Based Image Retrieval:}
+Field based retrieval es una extensi\'on del text based retrieval donde solo un campo(field) es usado en anotaci\'on 
+y recuperaci\'on. El enfoque basado en el campo (field based) describe y recupera art\'iculos usando uno o m\'as pares de valores 
+del campo. Regularmente un esquema de metadatos es descrito por un conjunto de campos y pocas indicaciones sobre el tipo de
+valores que puede ser elegidos por un campo  particular. La plantilla (template) de metadatos y esquemas ampliamaneta utilizada para 
+describir documentos online en general es la \textbf{Dublin Core(DC)}. Los campos de la DC version 1.1 son rights, coverage, relation,
+language, source, identifier, format, type, data, contributor, publisher, description, subject, creator y title.  Versiones calificadas de 
+DC han side creadas para dominions particulares como la decripci\'on de piezas de arte en museos.
+
+\subsection{Structure Based Image Retrieval:}
+
+El paradigma de recuperaci\'on basado en estructuras. En este m\'etodo, se utiliza un enfoque basado enn el campo(field) que principalmente
+utiliza una estructura de parers de valores atributo. Este m\'etodo permite descripciones m\'as complejas implicando relaciones. Por ejemplo,
+una definici\'on de una parte de un auto puede incluir especificaciones de esos componentes. Cada elemento del objeto se puede especificar 
+de nuevo usando varios atributos como la forma, el tama\~{n}o y el material. Los elementos pueden incluso tener elementos ellos mismos, por 
+ejemplo, una mesa tiene patas, y sus subelementos pueden moverse hasta el nivel donde un elemento no puede obtener un subelemento m\'as particular.
+
+
+
+
+
+
 
 \newpage
 
