--- a/seminario.tex
+++ b/seminario.tex
@@ -207,7 +207,19 @@ $\blacktriangleright $ El contraste\\
 $\blacktriangleright $ La aspereza\\
 
 De estas caracter\'isticas la aspereza, la direccionalidad y la regularidad son las m\'as importantes. Estas tres est\'an relacionadas 
-con otras que son menos eficaces con respecto a la descripci\'on de la textura. 
+con otras que son menos eficaces con respecto a la descripci\'on de la textura. Los descriptores de navegaci\'on de texturas son 
+obtenidos desde \textbf{MPEG-7}. Estos son regularidad, asperza, direccionalidad. Se ha encontrado que la textura de Brodatz funcionar\'a
+de manera excelente con caracter\'isticas de palabras como aleatoriedad, direccionalidad y periodicidad. Las caracter\'isticas de Tamura
+no funcionan para m\'ultiples resoluciones que se consideren para la medici\'on. Las caracter\'isticas globales se ven afectadas por 
+distorsiones de la imagen como diferencias de orientaci\'on debido a la distorsi\'on del punto de vista y la escala. Si las regiones
+de textura en la imagen no est\'an organizadas y son similares, se producir\'ia una respuesta de recuperaci\'on deficiente para im\'agenes
+de escenas naturales. El estudio de la visi\'on humana puede coincidir bastante con las caracter\'isticas de Wavelet y Gabor en la mayor 
+parte de la recuperaci\'on de im\'agenes. Pero el dise\~{n}o actual del filtro de Gabor y la transformada de Wavelet solo est\'a 
+destinado a im\'agenes rectangulares. Pero en un RBIR la regi\'on  de la imagen tiene formas err\'aticas. Por tanto en tal caso las 
+caracter\'isticas de la textura se utilizan eficazmente. Pero para la representaci\'on de im\'agenes naturales el descriptor de histogramas
+de borde (EHD) es el m\'as adecuado y eficaz.
+
+
 
 
 
@@ -247,5 +259,15 @@ anterior y es muy popular en la comunidad de recuperación de imágenes, es la p
 de entidades recuperadas con respecto a una consulta, si la precisión se calcula en la profundidad de cada entidad relevante 
 obtenida, la precisión promedio se da como la media de toda la precisión individual. Como es obvio, esta métrica está muy 
 influenciada por elementos relevantes de alto rango y no tanto por los que se encuentran al final de la lista recuperada.
+
+\newpage
+
+\title{Ventajas y desventajas}
+\author{David Orlando De Quesada Oliva, Javier Dom\'inguez}
+\institute{MATCOM, Universidad de La Habana,\\
+\email{d.quesada2@estudiantes.matcom.uh.cu, j.dominguez@estudiantes.matcom.uh.cu},\\
+\texttt{}
+}
+\maketitle
 
 \end{document}
